--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -41,7 +41,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="{{ path('zectranet_user_page') }}">Zectranet <i class="fa fa-bookmark"></i></a>
+					<a class="navbar-brand" href="{{ path('zectranet_user_home') }}">Zectranet <i class="fa fa-bookmark"></i></a>
 				</div>
 			{% endif %}
 
