--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -287,6 +287,12 @@
 						<ul class="dropdown-menu dropdown-user">
 
 							<li>
+								<a href="{{ path('zectranet_user_home') }}">
+									<i class="fa fa-user fa-fw"></i>
+									Summary
+								</a>
+							</li>
+							<li>
 								<a href="{{ path('zectranet_user_page') }}">
 									<i class="fa fa-user fa-fw"></i>
 									My Profile
